// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateAgentModule > snapshot: agent module with MCP server 1`] = `
"import { generateText } from 'ai';
import { anthropic } from '@ai-sdk/anthropic';
import { Client } from '@modelcontextprotocol/sdk/client/index.js';
import { StdioClientTransport } from '@modelcontextprotocol/sdk/client/stdio.js';

/**
 * Agent: MCPAgent
 * Generated by @agentforge/target-local
 */

type Message = { role: 'user' | 'assistant'; content: string };

const conversationHistory: Message[] = [];

const SYSTEM_PROMPT = "You are a helpful assistant.";


let FileServerClient: Client;
let mcpInitialized = false;

async function initMCPClients(): Promise<void> {
  if (mcpInitialized) return;
  mcpInitialized = true;

  // Initialize MCP server: FileServer
  const FileServerClientTransport = new StdioClientTransport({
    command: "npx",
    args: ["-y","@modelcontextprotocol/server-filesystem","/tmp"],
    env: {
      ...process.env as Record<string, string>,
      "HOME": "/Users/test",
    },
  });

  FileServerClient = new Client(
    { name: "FileServer-client", version: '1.0.0' },
    { capabilities: {} },
  );

  await FileServerClient.connect(FileServerClientTransport);
  const FileServerClientTools = await FileServerClient.listTools();
  console.log('[MCP] Connected to FileServer:', FileServerClientTools.tools.map(t => t.name).join(', '));
}



/**
 * Send a message to the MCPAgent agent and receive a response.
 *
 * @param userMessage - The user's input message.
 * @returns The assistant's response text.
 */
export async function chat(userMessage: string): Promise<string> {
  await initMCPClients();

  conversationHistory.push({ role: 'user', content: userMessage });

  const result = await generateText({
    model: anthropic('claude-sonnet-4'),
    system: SYSTEM_PROMPT,
    messages: conversationHistory,
  });

  const assistantMessage = result.text;
  conversationHistory.push({ role: 'assistant', content: assistantMessage });

  return assistantMessage;
}

/**
 * Reset the conversation history for this agent.
 */
export function resetConversation(): void {
  conversationHistory.length = 0;
}

/**
 * Get the agent's display name.
 */
export const agentName = "MCPAgent";
"
`;

exports[`generateAgentModule > snapshot: full agent module with model, tools, and prompt 1`] = `
"import { generateText } from 'ai';
import { anthropic } from '@ai-sdk/anthropic';

/**
 * Agent: ResearchBot
 * Generated by @agentforge/target-local
 */

type Message = { role: 'user' | 'assistant'; content: string };

const conversationHistory: Message[] = [];

const SYSTEM_PROMPT = "You are a research assistant.";



import { z } from 'zod';
import { tool } from 'ai';

const agentTools = {
  WebSearch: tool({
    description: "Search the web",
    parameters: z.object({
    query: z.string().describe("Search query"),
  }),
    execute: async (params) => {
      return { results: [] };
    },
  }),
};


/**
 * Send a message to the ResearchBot agent and receive a response.
 *
 * @param userMessage - The user's input message.
 * @returns The assistant's response text.
 */
export async function chat(userMessage: string): Promise<string> {

  conversationHistory.push({ role: 'user', content: userMessage });

  const result = await generateText({
    model: anthropic('claude-sonnet-4'),
    system: SYSTEM_PROMPT,
    messages: conversationHistory,
    tools: agentTools,
    maxSteps: 10,
  });

  const assistantMessage = result.text;
  conversationHistory.push({ role: 'assistant', content: assistantMessage });

  return assistantMessage;
}

/**
 * Reset the conversation history for this agent.
 */
export function resetConversation(): void {
  conversationHistory.length = 0;
}

/**
 * Get the agent's display name.
 */
export const agentName = "ResearchBot";
"
`;

exports[`generateMCPSetup > snapshot: MCP setup with env vars 1`] = `
"
let ToolServerClient: Client;
let mcpInitialized = false;

async function initMCPClients(): Promise<void> {
  if (mcpInitialized) return;
  mcpInitialized = true;

  // Initialize MCP server: ToolServer
  const ToolServerClientTransport = new StdioClientTransport({
    command: "/usr/local/bin/tool-server",
    args: ["--port","3000"],
    env: {
      ...process.env as Record<string, string>,
      "API_KEY": "secret-key",
      "NODE_ENV": "production",
    },
  });

  ToolServerClient = new Client(
    { name: "ToolServer-client", version: '1.0.0' },
    { capabilities: {} },
  );

  await ToolServerClient.connect(ToolServerClientTransport);
  const ToolServerClientTools = await ToolServerClient.listTools();
  console.log('[MCP] Connected to ToolServer:', ToolServerClientTools.tools.map(t => t.name).join(', '));
}
"
`;

exports[`generateRuntime > snapshot: multi-agent runtime 1`] = `
"import * as AgentAlphaAgent from './agents/AgentAlpha.js';
import * as AgentBetaAgent from './agents/AgentBeta.js';
import * as AgentGammaAgent from './agents/AgentGamma.js';
import * as readline from 'node:readline';

/**
 * AgentForge Local Runtime
 * Multiple agents available
 * Generated by @agentforge/target-local
 */

const agents: Record<string, { chat: (msg: string) => Promise<string>; resetConversation: () => void; agentName: string }> = {
  'AgentAlpha': AgentAlphaAgent,
  'AgentBeta': AgentBetaAgent,
  'AgentGamma': AgentGammaAgent,
};

const agentNames = Object.keys(agents);

const rl = readline.createInterface({
  input: process.stdin,
  output: process.stdout,
});

let currentAgent: string | null = null;

function showMenu(): void {
  console.log('\\nAvailable agents:');
  agentNames.forEach((name, i) => {
    console.log(\`  \${i + 1}. \${name}\`);
  });
  console.log();

  rl.question('Select an agent (number or name): ', (input: string) => {
    const trimmed = input.trim();
    const num = parseInt(trimmed, 10);

    if (num >= 1 && num <= agentNames.length) {
      currentAgent = agentNames[num - 1]!;
    } else if (agentNames.includes(trimmed)) {
      currentAgent = trimmed;
    } else {
      console.log('Invalid selection.');
      showMenu();
      return;
    }

    console.log(\`\\nChatting with: \${currentAgent}\`);
    console.log('Commands: /switch (change agent), /reset (clear history), /quit (exit)\\n');
    prompt();
  });
}

function prompt(): void {
  rl.question('You: ', async (input: string) => {
    const trimmed = input.trim();

    if (trimmed === '' || trimmed === '/quit' || trimmed === '/exit') {
      console.log('Goodbye!');
      rl.close();
      process.exit(0);
    }

    if (trimmed === '/switch') {
      currentAgent = null;
      showMenu();
      return;
    }

    if (trimmed === '/reset') {
      agents[currentAgent!]!.resetConversation();
      console.log('Conversation reset.');
      prompt();
      return;
    }

    try {
      const response = await agents[currentAgent!]!.chat(trimmed);
      console.log(\`\\nAssistant: \${response}\\n\`);
    } catch (error) {
      console.error('Error:', error instanceof Error ? error.message : error);
    }

    prompt();
  });
}

console.log('\\n--- AgentForge Local Runtime ---');
console.log(\`\${agentNames.length} agent(s) available\\n\`);

showMenu();
"
`;

exports[`generateRuntime > snapshot: single agent runtime 1`] = `
"import * as TestAgentAgent from './agents/TestAgent.js';
import * as readline from 'node:readline';

/**
 * AgentForge Local Runtime
 * Agent: TestAgent
 * Generated by @agentforge/target-local
 */

const rl = readline.createInterface({
  input: process.stdin,
  output: process.stdout,
});

function prompt(): void {
  rl.question('You: ', async (input: string) => {
    const trimmed = input.trim();

    if (trimmed === '' || trimmed === '/quit' || trimmed === '/exit') {
      console.log('Goodbye!');
      rl.close();
      process.exit(0);
    }

    if (trimmed === '/reset') {
      TestAgentAgent.resetConversation();
      console.log('Conversation reset.');
      prompt();
      return;
    }

    try {
      const response = await TestAgentAgent.chat(trimmed);
      console.log(\`\\nAssistant: \${response}\\n\`);
    } catch (error) {
      console.error('Error:', error instanceof Error ? error.message : error);
    }

    prompt();
  });
}

console.log(\`\\n--- AgentForge Local Runtime ---\`);
console.log(\`Agent: TestAgent\`);
console.log(\`Commands: /reset (clear history), /quit (exit)\\n\`);

prompt();
"
`;
